opusparse: fix frame size determination

https://bugzilla.gnome.org/show_bug.cgi?id=741321